2003-08-04  Thorsten Jordan <thorsten_jordan@gmx.de>
	* made release 0.0.12 and increased version number to 0.0.13

2003-08-04  Thorsten Jordan <thorsten_jordan@gmx.de>
	* fixed makedatapack. some files missing, we need a new release.

2003-08-03  Thorsten Jordan <thorsten_jordan@gmx.de>
	* submarine.cpp
	  - added sub model IXc/40 (most numerous type IX) with all
	    dependant files. 3d model is there, but looks awful yet.

2003-08-02  Thorsten Jordan <thorsten_jordan@gmx.de>
	* font.cpp
	  - new print function for wrap around texts
	    (one bug still to be found and fixed.)
	* sub_damage_display.cpp
	  - new popup, fixed bug.
	* system.cpp texture.cpp
	  - moved draw image functions to texture class. functions can still
	    be called via system class.

2003-07-31  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp game.cpp
	  - support for multiple cloud textures and one new cloud texture.
	* sub_damage_display.cpp submarine.cpp
	  - damages stored as finer values, adapted display.
	    now damages can be accumulated.
	* submarine.cpp
	  - all parts visible in damage display are now also damageable.
	  - more information is shown about damages.

2003-07-30  Thorsten Jordan <thorsten_jordan@gmx.de>
	* game.cpp submarine.cpp
	  - moved dc explosion dependend parts to submarine.cpp
	    and improved damage calculation.
	* system.cpp
	  - write_console new parameter: write to file only.

2003-07-28  Thorsten Jordan <thorsten_jordan@gmx.de>
	* torpedo.cpp user_interface.cpp
	  - introduced new torpedo types. Now all historical types available
	    with authentic data, except T4 (Falke) sensors.
	* depth_charge.cpp
	  - fixed bug: depth charges were never removed and kept falling and
	    exploding eternally.
	* sound.cpp subsim.cpp
	  - option to disable sound.
	  - fixed sound bug, SDL audio gots initialized whenever a sample was
	    constructed
	  - also a (more paranoid) check has been added to avoid array out
	    of bounds bug
	* submarine.cpp